--- a/EasyEats/src/main/resources/application.yml
+++ b/EasyEats/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/easyeats
+    url: jdbc:postgresql://localhost:5433/easyeats
     username: postgres
     password: admin
   jpa:
@@ -14,5 +14,12 @@ spring:
 
 server:
   port: 8081
+
+logging:
+  level:
+    com:
+      sorsix:
+        finalproject:
+          easyeats: DEBUG
 
 
