--- a/EasyEats/src/main/Frontend/EasyEats/package.json
+++ b/EasyEats/src/main/Frontend/EasyEats/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
+    "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
